# CoreLib

./: .gitignore  CMakeLists.txt  install.sh
src/: CMakeLists.txt  addresstype.cc  addresstype.hh  bitwidth.hh  buffer.cc  buffer.hh  complex.cc  complex.hh  container_helpers.hh  error.cc  error.hh  notification.cc  notification.hh  random_device.cc  random_device.hh  singleton.hh  type_converter.hh  vmemodes.cc  vmemodes.hh
tests/: CMakeLists.txt  test_AddressType.cc  test_buffer.cc  test_complex.cc  test_container_helpers.cc  test_error.cc  test_notification.cc  test_random_device.cc  test_type_converter.cc  test_vmemodes.cc
